--- a/webframework-core/build.gradle
+++ b/webframework-core/build.gradle
@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok:1.18.+'
-    annotationProcessor 'org.projectlombok:lombok:1.18.+'
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
